--- a/Chart.csproj
+++ b/Chart.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Models\GetChart.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Controllers\ItemController.cs" />
+    <Compile Include="Models\SaveResult.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
