--- a/Chart.csproj
+++ b/Chart.csproj
@@ -120,11 +120,14 @@
     <Compile Include="Controllers\EmployeesController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="CRUDContext.cs" />
+    <Compile Include="Models\City.cs" />
     <Compile Include="Models\Context.cs" />
     <Compile Include="Models\DeleteResult.cs" />
     <Compile Include="Models\DetailChart.cs" />
     <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Gender.cs" />
     <Compile Include="Models\GetChart.cs" />
+    <Compile Include="Models\GetCityAll.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Models\SaveResult.cs" />
@@ -219,9 +222,9 @@
           <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>
           </DevelopmentServerVPath>
-          <IISUrl>http://devmvc.me/desktopmodules/mvc/Chart</IISUrl>
+          <IISUrl>http://dnndev.me/desktopmodules/mvc/Chart</IISUrl>
           <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
-          <IISAppRootUrl>http://devmvc.me</IISAppRootUrl>
+          <IISAppRootUrl>http://dnndev.me/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
