--- a/Chart.csproj
+++ b/Chart.csproj
@@ -120,11 +120,14 @@
     <Compile Include="Controllers\EmployeesController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="CRUDContext.cs" />
+    <Compile Include="Models\City.cs" />
     <Compile Include="Models\Context.cs" />
     <Compile Include="Models\DeleteResult.cs" />
     <Compile Include="Models\DetailChart.cs" />
     <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Gender.cs" />
     <Compile Include="Models\GetChart.cs" />
+    <Compile Include="Models\GetCityAll.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Models\SaveResult.cs" />
@@ -193,6 +196,8 @@
     <Content Include="Views\Employees\Details.cshtml" />
     <Content Include="Views\Employees\Edit.cshtml" />
     <Content Include="Views\Employees\Index.cshtml" />
+    <Content Include="Views\Shared\_showCity.cshtml" />
+    <Content Include="Views\Settings\GetCity.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
