--- a/Chart.csproj
+++ b/Chart.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Models\Gender.cs" />
     <Compile Include="Models\GetChart.cs" />
     <Compile Include="Models\GetCityAll.cs" />
+    <Compile Include="Models\GetPerson.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Models\SaveResult.cs" />
