--- a/Web.config
+++ b/Web.config
@@ -1,42 +1,51 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
     <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor">
-      <section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor" requirePermission="false" />
-      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor" requirePermission="false" />
+      <section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor" requirePermission="false"/>
+      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor" requirePermission="false"/>
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="ChristocModulesChartContext" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=ChristocModulesChartContext-20201029155903; Integrated Security=True; MultipleActiveResultSets=True"
-      providerName="System.Data.SqlClient" />
-    <add name="Context" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=Context-20201029160136; Integrated Security=True; MultipleActiveResultSets=True"
-      providerName="System.Data.SqlClient" />
+    <add name="ChristocModulesChartContext" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=ChristocModulesChartContext-20201029155903; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="Context" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=Context-20201029160136; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web.webPages.razor>
-    <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc" />
+    <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc"/>
     <pages pageBaseType="DotNetNuke.Web.Mvc.Framework.DnnWebViewPage">
       <namespaces>
-        <add namespace="System.Linq" />
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
-        <add namespace="DotNetNuke.Web.Mvc.Helpers" />
+        <add namespace="System.Linq"/>
+        <add namespace="System.Web.Helpers"/>
+        <add namespace="System.Web.Mvc"/>
+        <add namespace="System.Web.Mvc.Ajax"/>
+        <add namespace="System.Web.Mvc.Html"/>
+        <add namespace="System.Web.Routing"/>
+        <add namespace="System.Web.WebPages"/>
+        <add namespace="DotNetNuke.Web.Mvc.Helpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="mssqllocaldb"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.2" />
+      </system.Web>
+  -->
+  <system.web>
+    <compilation targetFramework="4.5.1"/>
+  </system.web>
 </configuration>
