--- a/Web.config
+++ b/Web.config
@@ -18,6 +18,7 @@
       <namespaces>
         <add namespace="System.Linq"/>
         <add namespace="System.Web.Helpers"/>
+        <add namespace="System.Web.WebPages"/>
         <add namespace="System.Web.Mvc"/>
         <add namespace="System.Web.Mvc.Ajax"/>
         <add namespace="System.Web.Mvc.Html"/>
@@ -46,6 +47,6 @@
       </system.Web>
   -->
   <system.web>
-    <compilation targetFramework="4.5.1"/>
+    <compilation targetFramework="4.5.2"/>
   </system.web>
 </configuration>
